force-app/main/default/objects/Case/fields/Reason_for_split__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_split__c</fullName>
    <description>If the child case is splitted from the parent, the agent will have to specify a reason</description>
    <label>Reason for split</label>
    <type>TextArea</type>
</CustomField>