force-app/main/default/objects/Case/fields/RecommendedCure__c.field-meta.xml
<CustomField>
    <fullName>RecommendedCure__c</fullName>
    <label>Recommended Solution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LikelyCause__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACCEPT RETURN</fullName>
            </value>
            <value>
                <fullName>AdjustButtons</fullName>
                <isActive>false</isActive>
                <label>AdjustButtons</label>
            </value>
            <value>
                <fullName>AdjustCartridge</fullName>
                <isActive>false</isActive>
                <label>AdjustCartridge</label>
            </value>
            <value>
                <fullName>ADJUST VALVE TO LOWER SETTING</fullName>
            </value>
            <value>
                <fullName>CHECK DATE ON PACKAGING</fullName>
            </value>
            <value>
                <fullName>CHECK ELECTRICTITY IS CONNECTED</fullName>
            </value>
            <value>
                <fullName>CHECK ORIGINAL ORDER</fullName>
            </value>
            <value>
                <fullName>CHECK THERMOSTAT OR HEATING ELEMENT</fullName>
            </value>
            <value>
                <fullName>CHECK WITH ELECTRICIAN</fullName>
            </value>
            <value>
                <fullName>CHECK WITH INSTALLER</fullName>
            </value>
            <value>
                <fullName>CLEAN EACH NOZZLE</fullName>
            </value>
            <value>
                <fullName>CLEAR OBSTRUCTION</fullName>
            </value>
            <value>
                <fullName>CLOSE CLAIM</fullName>
            </value>
            <value>
                <fullName>CONTACT HELPLINE</fullName>
            </value>
            <value>
                <fullName>CONTACT INSTALLER</fullName>
            </value>
            <value>
                <fullName>CONTACT PLUMBER</fullName>
            </value>
            <value>
                <fullName>ENSURE SENSOR IS PRESSED FIRMLY SO RECOGNISES A FINGERPRINT</fullName>
            </value>
            <value>
                <fullName>Escalate</fullName>
                <isActive>false</isActive>
                <label>Escalate</label>
            </value>
            <value>
                <fullName>EVALUATE ANOTHER PRODUCT</fullName>
            </value>
            <value>
                <fullName>FIND OUT AND QUALIFY THE PROBLEM</fullName>
            </value>
            <value>
                <fullName>HoldButton</fullName>
                <isActive>false</isActive>
                <label>HoldButton</label>
            </value>
            <value>
                <fullName>INSTALLER MUST THREAD BOLTS IN TO CORRECT DEPTH</fullName>
            </value>
            <value>
                <fullName>INSTALL EXTENSION KIT</fullName>
            </value>
            <value>
                <fullName>NO BLEEDING DONE DURING INSTALLATION - INTERNAL DAMAGE</fullName>
            </value>
            <value>
                <fullName>OpenServiceStop</fullName>
                <isActive>false</isActive>
                <label>OpenServiceStop</label>
            </value>
            <value>
                <fullName>PLUMBER TO CLEAR DRAIN</fullName>
            </value>
            <value>
                <fullName>REFIT VALVE</fullName>
            </value>
            <value>
                <fullName>REMOVE AIR - NO BLEEDING DONE DURING INSTALLATION</fullName>
            </value>
            <value>
                <fullName>REMOVE DEBRIS FROM AERATOR</fullName>
            </value>
            <value>
                <fullName>REMOVE OBSTRUCTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>