force-app/main/default/objects/Case/fields/RefundCustomer__c.field-meta.xml
<CustomField>
    <fullName>RefundCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Instructs to refund the money top the customer</description>
    <label>Refund Customer</label>
    <type>Checkbox</type>
</CustomField>