force-app/main/default/objects/Case/fields/RejectionReason__c.field-meta.xml
<CustomField>
    <fullName>RejectionReason__c</fullName>
    <description>Reason why the case has been rejected (in plain words)</description>
    <label>Rejection Reason</label>
    <length>150</length>
    <type>Text</type>
</CustomField>