force-app/main/default/objects/Case/fields/ReplacementOrderClass__c.field-meta.xml
<CustomField>
    <fullName>ReplacementOrderClass__c</fullName>
    <label>Replacement Order Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REPLACE_FULL</fullName>
                <default>true</default>
                <label>Replace entire product</label>
            </value>
            <value>
                <fullName>REPLACE_PART</fullName>
                <label>Replace part or component</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>