force-app/main/default/objects/Case/fields/ReportedMakeProblem__c.field-meta.xml
<CustomField>
    <fullName>ReportedMakeProblem__c</fullName>
    <description>This field represents the Cartesian product between &apos;make&apos; and &apos;reported problem&apos;. It is a utility, hidden field used to control the visibility values of the problem classification fields. Any changes to the make and to reported problem picklists should be updated here accordingly. It is updated in the case trigger</description>
    <label>Reported Problem per Make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>000-BROKEN</fullName>
            </value>
            <value>
                <fullName>000-DETERIORATED</fullName>
            </value>
            <value>
                <fullName>000-INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>000-NOT-WORKING</fullName>
            </value>
            <value>
                <fullName>000-OTHERS</fullName>
            </value>
            <value>
                <fullName>000-WRONG-PRODUCT</fullName>
            </value>
            <value>
                <fullName>001-BROKEN</fullName>
            </value>
            <value>
                <fullName>001-DETERIORATED</fullName>
            </value>
            <value>
                <fullName>001-INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>001-NOT-WORKING</fullName>
            </value>
            <value>
                <fullName>001-OTHERS</fullName>
            </value>
            <value>
                <fullName>001-WRONG-PRODUCT</fullName>
            </value>
            <value>
                <fullName>002-BROKEN</fullName>
            </value>
            <value>
                <fullName>002-DETERIORATED</fullName>
            </value>
            <value>
                <fullName>002-INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>002-NOT-WORKING</fullName>
            </value>
            <value>
                <fullName>002-OTHERS</fullName>
            </value>
            <value>
                <fullName>002-WRONG-PRODUCT</fullName>
            </value>
            <value>
                <fullName>006-BROKEN</fullName>
            </value>
            <value>
                <fullName>006-DETERIORATED</fullName>
            </value>
            <value>
                <fullName>006-INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>006-NOT-WORKING</fullName>
            </value>
            <value>
                <fullName>006-OTHERS</fullName>
            </value>
            <value>
                <fullName>006-WRONG-PRODUCT</fullName>
            </value>
            <value>
                <fullName>007-BROKEN</fullName>
            </value>
            <value>
                <fullName>007-DETERIORATED</fullName>
            </value>
            <value>
                <fullName>007-INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>007-NOT-WORKING</fullName>
            </value>
            <value>
                <fullName>007-OTHERS</fullName>
            </value>
            <value>
                <fullName>007-WRONG-PRODUCT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>