force-app/main/default/objects/Case/fields/ReportedTypeProblem__c.field-meta.xml
<CustomField>
    <fullName>ReportedTypeProblem__c</fullName>
    <description>This field represents the Cartesian product between &apos;make&apos;, product type and &apos;reported problem&apos;. It is a utility, hidden field used to control the visibility values of the problem classification fields. Any changes to the make, product type and to reported problem picklists should be updated here accordingly. It is updated in the case trigger</description>
    <label>Problem Reported per Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>000-ALL-BROKEN</fullName>
            </value>
            <value>
                <fullName>000-ALL-INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>000-ALL-OTHERS</fullName>
            </value>
            <value>
                <fullName>000-ALL-WRONG-PRODUCT</fullName>
            </value>
            <value>
                <fullName>001-ALL-BROKEN</fullName>
            </value>
            <value>
                <fullName>001-ALL-DETERIORATED</fullName>
            </value>
            <value>
                <fullName>001-ALL-INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>001-ALL-NOT-WORKING</fullName>
            </value>
            <value>
                <fullName>001-ALL-OTHERS</fullName>
            </value>
            <value>
                <fullName>001-ALL-WRONG-PRODUCT</fullName>
            </value>
            <value>
                <fullName>001-BAS-DETERORIATED</fullName>
            </value>
            <value>
                <fullName>001-BAS-NOT-WORKING</fullName>
            </value>
            <value>
                <fullName>001-TIL-DETERORIATED</fullName>
            </value>
            <value>
                <fullName>001-TIL-NOT-WORKING</fullName>
            </value>
            <value>
                <fullName>001-TUB-DETERORIATED</fullName>
            </value>
            <value>
                <fullName>001-TUB-NOT-WORKING</fullName>
            </value>
            <value>
                <fullName>002-ALL-BROKEN</fullName>
            </value>
            <value>
                <fullName>002-ALL-INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>002-ALL-OTHERS</fullName>
            </value>
            <value>
                <fullName>002-ALL-WRONG-PRODUCT</fullName>
            </value>
            <value>
                <fullName>002-TIL-DETERIORATED</fullName>
            </value>
            <value>
                <fullName>002-TIL-NOT-WORKING</fullName>
            </value>
            <value>
                <fullName>006-ACC-DETERIORATED</fullName>
            </value>
            <value>
                <fullName>006-ALL-BROKEN</fullName>
            </value>
            <value>
                <fullName>006-ALL-INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>006-ALL-OTHERS</fullName>
            </value>
            <value>
                <fullName>006-ALL-WRONG-PRODUCT</fullName>
            </value>
            <value>
                <fullName>006-BAS-DETERIORATED</fullName>
            </value>
            <value>
                <fullName>006-BAS-NOT-WORKING</fullName>
            </value>
            <value>
                <fullName>006-BRW-DETERIORATED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>