force-app/main/default/objects/Case/fields/Reporter_refuse_to_attach_photos__c.field-meta.xml
<CustomField>
    <fullName>Reporter_refuse_to_attach_photos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reporter refuse to attach photos</label>
    <type>Checkbox</type>
</CustomField>