force-app/main/default/objects/Case/fields/Reporter_SKU_site_identification__c.field-meta.xml
<CustomField>
    <fullName>Reporter_SKU_site_identification__c</fullName>
    <description>Campo en el que se guardarán los ids de los assets que ha seleccionado el cliente en la site de skuidentification para que al cargar las facturas en el wizard aparezcan ya seleccionadas, etarán separados por comas</description>
    <label>Reporter SKU site identification</label>
    <type>TextArea</type>
</CustomField>