force-app/main/default/objects/Case/fields/RestockFee__c.field-meta.xml
<CustomField>
    <fullName>RestockFee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apply restocking fee to customer when checked</description>
    <inlineHelpText>Check this box to apply a restocking fee to the customer collection</inlineHelpText>
    <label>Restock Fee</label>
    <type>Checkbox</type>
</CustomField>