force-app/main/default/objects/Case/fields/Sales_rep_email__c.field-meta.xml
<CustomField>
    <fullName>Sales_rep_email__c</fullName>
    <formula>Customer__r.Sales_Representative__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales rep email</label>
    <type>Text</type>
</CustomField>