force-app/main/default/objects/Case/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <description>SAP Sales Organisation</description>
    <label>Sales Org</label>
    <length>4</length>
    <type>Text</type>
</CustomField>