force-app/main/default/objects/Case/fields/SAPCreditNote__c.field-meta.xml
<CustomField>
    <fullName>SAPCreditNote__c</fullName>
    <label>SAP Credit Note</label>
    <length>10</length>
    <referenceTo>Facturas_cabeceraSet__x</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>ExternalLookup</type>
</CustomField>