force-app/main/default/objects/Case/fields/SAPDeliveryNumber__c.field-meta.xml
<CustomField>
    <fullName>SAPDeliveryNumber__c</fullName>
    <label>SAP Delivery Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>