force-app/main/default/objects/Case/fields/SAPDeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>SAPDeliveryStatus__c</fullName>
    <label>SAP Delivery Status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>