force-app/main/default/objects/Case/fields/SAPInvoice__c.field-meta.xml
<CustomField>
    <fullName>SAPInvoice__c</fullName>
    <description>Invoice Number of the goods to be collected</description>
    <inlineHelpText>Please enter the invoice number of the goods to be collected</inlineHelpText>
    <label>SAP Invoice</label>
    <length>10</length>
    <referenceTo>Facturas_cabeceraSet__x</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>ExternalLookup</type>
</CustomField>