force-app/main/default/objects/Case/fields/SAPInvoiceLine__c.field-meta.xml
<CustomField>
    <fullName>SAPInvoiceLine__c</fullName>
    <label>Invoice Line</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>