force-app/main/default/objects/Case/fields/SAPMake__c.field-meta.xml
<CustomField>
    <fullName>SAPMake__c</fullName>
    <formula>Product.SAPFactory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Make</label>
    <type>Text</type>
</CustomField>