force-app/main/default/objects/Case/fields/SAPOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>SAPOrderNumber__c</fullName>
    <description>Stores the SAP Order Number created to manage COLLECTIONS. This is ised in the version 1 that does not creates an ORDER in Salesforce.</description>
    <label>SAP Order Number</label>
    <length>10</length>
    <referenceTo>Pedidos_cabeceraSet__x</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>ExternalLookup</type>
</CustomField>