force-app/main/default/objects/Case/fields/SAPWarehouse__c.field-meta.xml
<CustomField>
    <fullName>SAPWarehouse__c</fullName>
    <description>Warehouse selected</description>
    <label>SAP Warehouse</label>
    <length>4</length>
    <type>Text</type>
</CustomField>