force-app/main/default/objects/Case/fields/Send_SKU_100_free__c.field-meta.xml
<CustomField>
    <fullName>Send_SKU_100_free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SKU 100% free</label>
    <type>Checkbox</type>
</CustomField>