force-app/main/default/objects/Case/fields/Send_technician__c.field-meta.xml
<CustomField>
    <fullName>Send_technician__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send technician</label>
    <type>Checkbox</type>
</CustomField>