force-app/main/default/objects/Case/fields/Service_date__c.field-meta.xml
<CustomField>
    <fullName>Service_date__c</fullName>
    <label>Service date</label>
    <type>DateTime</type>
</CustomField>