force-app/main/default/objects/Case/fields/Service_done__c.field-meta.xml
<CustomField>
    <fullName>Service_done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service done</label>
    <type>Checkbox</type>
</CustomField>