force-app/main/default/objects/Case/fields/Shipment_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Address__c</fullName>
    <description>DELETE</description>
    <label>XXXShipment Address</label>
    <type>TextArea</type>
</CustomField>