force-app/main/default/objects/Case/fields/SiteVisitDate__c.field-meta.xml
<CustomField>
    <fullName>SiteVisitDate__c</fullName>
    <label>Site Visit Date</label>
    <type>Date</type>
</CustomField>