force-app/main/default/objects/Case/fields/SiteVisitNotes__c.field-meta.xml
<CustomField>
    <fullName>SiteVisitNotes__c</fullName>
    <label>Site Visit Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>