force-app/main/default/objects/Case/fields/SiteVisitorName__c.field-meta.xml
<CustomField>
    <fullName>SiteVisitorName__c</fullName>
    <label>Site Visitor&apos;s Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>