force-app/main/default/objects/Case/fields/Standard_Solution_Applied__c.field-meta.xml
<CustomField>
    <fullName>Standard_Solution_Applied__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Solution Applied</label>
    <referenceTo>Solution</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>