force-app/main/default/objects/Case/fields/StatusTimestamp__c.field-meta.xml
<CustomField>
    <fullName>StatusTimestamp__c</fullName>
    <description>Datetim the current status has been set</description>
    <label>Status Timestamp</label>
    <type>DateTime</type>
</CustomField>