force-app/main/default/objects/Case/fields/SuggestedSolution__c.field-meta.xml
<CustomField>
    <fullName>SuggestedSolution__c</fullName>
    <label>Suggested Solution</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>