force-app/main/default/objects/Case/fields/SupplyInstallation__c.field-meta.xml
<CustomField>
    <fullName>SupplyInstallation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supply Installation</label>
    <type>Checkbox</type>
</CustomField>