force-app/main/default/objects/Case/fields/SupplyReplacement__c.field-meta.xml
<CustomField>
    <fullName>SupplyReplacement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Supply a replacement product or part</description>
    <label>Supply Replacement</label>
    <type>Checkbox</type>
</CustomField>