force-app/main/default/objects/Case/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <description>Description opf the problem</description>
    <label>Symptoms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ReportedTypeProblem__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BASIN NOT LEVEL</fullName>
            </value>
            <value>
                <fullName>BASIN NOT LEVEL / MOVEMENT</fullName>
            </value>
            <value>
                <fullName>BATH DRAIN NO LONGER OPEN/CLOSE</fullName>
            </value>
            <value>
                <fullName>BROKEN</fullName>
            </value>
            <value>
                <fullName>CISTERN FRAME IMCOMPLETE</fullName>
            </value>
            <value>
                <fullName>CISTERN OR PAN RUNNING CONTINOUSLY</fullName>
            </value>
            <value>
                <fullName>CrackedToiletSeat</fullName>
                <isActive>false</isActive>
                <label>CrackedToiletSeat</label>
            </value>
            <value>
                <fullName>CRACKS WITHIN PRODUCT</fullName>
            </value>
            <value>
                <fullName>DAMAGE ON CISTERN / FRAME</fullName>
            </value>
            <value>
                <fullName>DIVERTER DIFFICULT TO OPERATE</fullName>
            </value>
            <value>
                <fullName>DivertingToBothOutputs</fullName>
                <isActive>false</isActive>
                <label>DivertingToBothOutputs</label>
            </value>
            <value>
                <fullName>DOOR MIS-ALIGNED / DROPPED</fullName>
            </value>
            <value>
                <fullName>DRAWERS NOT OPERATING SMOOTHLY</fullName>
            </value>
            <value>
                <fullName>FaucetLeaksWater</fullName>
                <isActive>false</isActive>
                <label>FaucetLeaksWater</label>
            </value>
            <value>
                <fullName>FLOOR SENSOR NOT WORKING</fullName>
            </value>
            <value>
                <fullName>GLASS DAMAGED</fullName>
            </value>
            <value>
                <fullName>GROUT CRACKING AFTER INSTALLATION</fullName>
            </value>
            <value>
                <fullName>GROUT INCORRECT COLOUR</fullName>
            </value>
            <value>
                <fullName>HANDLE DIFFICULT TO OPERATE</fullName>
            </value>
            <value>
                <fullName>HotOrColdWater</fullName>
                <isActive>false</isActive>
                <label>HotOrColdWater</label>
            </value>
            <value>
                <fullName>HOT WATER PUMPED BACK TO COLD WATER</fullName>
            </value>
            <value>
                <fullName>INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>INCORRECT FLOW RATE AFTER INSTALLATION</fullName>
            </value>
            <value>
                <fullName>InsufficientHotColdWater</fullName>
                <isActive>false</isActive>
                <label>InsufficientHotColdWater</label>
            </value>
            <value>
                <fullName>LEAKS</fullName>
            </value>
            <value>
                <fullName>NEWLY DEVELOPED STAINING</fullName>
            </value>
            <value>
                <fullName>NEWLY DEVELOPED YELLOWING</fullName>
            </value>
            <value>
                <fullName>NOT CURING</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>PARTS MISSING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>