force-app/main/default/objects/Case/fields/SymptomsDetails__c.field-meta.xml
<CustomField>
    <fullName>SymptomsDetails__c</fullName>
    <description>Additional details to qualify the problem</description>
    <label>Symptoms Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Symptoms__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADHESIVE NOT WORKING</fullName>
            </value>
            <value>
                <fullName>ADJUSTABLE SCREW HAS FALLEN OUT OF THE DRAIN CAP</fullName>
            </value>
            <value>
                <fullName>AERATOR OBSTRUCTED</fullName>
            </value>
            <value>
                <fullName>BASIN WARPED / NOT LEVEL</fullName>
            </value>
            <value>
                <fullName>BROKEN</fullName>
            </value>
            <value>
                <fullName>CARRIER BOLTS TOO FAR OUT</fullName>
            </value>
            <value>
                <fullName>CHROME / PAINT DELAMINATING / COMING AWAY FROM ITEM</fullName>
            </value>
            <value>
                <fullName>CHROME DELAMINATING / COMING AWAY FROM TAP</fullName>
            </value>
            <value>
                <fullName>CRACKS DEVELOPED AFTER INSTALLATION</fullName>
            </value>
            <value>
                <fullName>CRACKS VISIBLE PRIOR TO INSTALLATION</fullName>
            </value>
            <value>
                <fullName>DEBRIS / DAMAGE IN CARTRIDGE</fullName>
            </value>
            <value>
                <fullName>DEBRIS IN DIVERTER OR DAMAGED</fullName>
            </value>
            <value>
                <fullName>DEFECTIVE DRAWER GLIDES</fullName>
            </value>
            <value>
                <fullName>DIVERTER OBSTRUCTED OR DAMAGED</fullName>
            </value>
            <value>
                <fullName>DOESN&apos;T HEAT UP</fullName>
            </value>
            <value>
                <fullName>DRAIN CABLE DISCONNECTED (IF SMALL BRASS SCREW STILL IN PLACED)</fullName>
            </value>
            <value>
                <fullName>FLEXIBLE HOSE DEGRADED</fullName>
            </value>
            <value>
                <fullName>GENERAL PROBLEM AFFECTING ENTIRE PROPERTY</fullName>
            </value>
            <value>
                <fullName>GLASS CHIPPED / DAMAGED / SCRATCHED</fullName>
            </value>
            <value>
                <fullName>GLASS SCRATCHED OR MARKED</fullName>
            </value>
            <value>
                <fullName>HAIRLINE CRACK WITH UNDERFLOOR HEATING</fullName>
            </value>
            <value>
                <fullName>HANDLES DAMAGED</fullName>
            </value>
            <value>
                <fullName>HINGES DROPPED / NOT LEVEL</fullName>
            </value>
            <value>
                <fullName>IMPROPER CLEANING OR MAINTENACE</fullName>
            </value>
            <value>
                <fullName>INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>INSUFFICIENT WATER PRESSURE</fullName>
            </value>
            <value>
                <fullName>LEAKING FROM HANDLE OR SPOUT</fullName>
            </value>
            <value>
                <fullName>LEAKING THROUGH CRACKS</fullName>
            </value>
            <value>
                <fullName>LIFTING VALVE DOES NOT STOP THE FLOW</fullName>
            </value>
            <value>
                <fullName>LIFTING VALVE STOPS FLOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>