force-app/main/default/objects/Case/fields/Technician_no_ok_service_cause__c.field-meta.xml
<CustomField>
    <fullName>Technician_no_ok_service_cause__c</fullName>
    <label>Technician no ok service cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect solution</fullName>
            </value>
            <value>
                <fullName>Other Claims</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>