force-app/main/default/objects/Case/fields/Total_Price_sent_materials__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_sent_materials__c</fullName>
    <description>Field used in approval process when there are no child cases

Criteria: ProductCase.send = true
Value: ProductCases(FinalPrice)</description>
    <label>Total Price sent materials</label>
    <summarizedField>Product_Case__c.Final_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Product_Case__c.Send__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_Case__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>