force-app/main/default/objects/Case/fields/XXXProblem__c.field-meta.xml
<CustomField>
    <fullName>XXXProblem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XXXProblem</label>
    <referenceTo>Problem__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>XXXCases</relationshipName>
    <type>Lookup</type>
</CustomField>