force-app/main/default/objects/Case/fields/XXXProductFamily__c.field-meta.xml
<CustomField>
    <fullName>XXXProductFamily__c</fullName>
    <label>XXXProduct Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TILES</fullName>
            </value>
            <value>
                <fullName>SANITARYWARE</fullName>
            </value>
            <value>
                <fullName>BASINS</fullName>
            </value>
            <value>
                <fullName>INSTALLATION SYSTEMS</fullName>
            </value>
            <value>
                <fullName>BRASSWARE</fullName>
            </value>
            <value>
                <fullName>SHOWER VALVES</fullName>
            </value>
            <value>
                <fullName>SHOWER HEADS</fullName>
            </value>
            <value>
                <fullName>SHOWER COLUMNS</fullName>
            </value>
            <value>
                <fullName>SHOWER TRAYS</fullName>
            </value>
            <value>
                <fullName>BATHTUBS</fullName>
            </value>
            <value>
                <fullName>ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>TOWEL WARMERS</fullName>
            </value>
            <value>
                <fullName>BATHROOM FURNITURE</fullName>
            </value>
            <value>
                <fullName>MIRRORS</fullName>
            </value>
            <value>
                <fullName>WORKTOPS</fullName>
            </value>
            <value>
                <fullName>TRIMS</fullName>
            </value>
            <value>
                <fullName>ADHESIVES</fullName>
            </value>
            <value>
                <fullName>GROUTS</fullName>
            </value>
            <value>
                <fullName>UNDERFLOOR HEATING</fullName>
            </value>
            <value>
                <fullName>ALL FAMILIES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>