force-app/main/default/objects/Case/recordTypes/ITCase.recordType-meta.xml
<RecordType>
    <fullName>ITCase</fullName>
    <active>true</active>
    <businessProcess>Cases Support Process</businessProcess>
    <description>Case to log IT issues</description>
    <label>IT Case</label>
</RecordType>