force-app/main/default/objects/Case/recordTypes/Neoris_case.recordType-meta.xml
<RecordType>
    <fullName>Neoris_case</fullName>
    <active>true</active>
    <businessProcess>Neoris_process_case</businessProcess>
    <label>Neoris_case</label>
</RecordType>