force-app/main/default/objects/Case/recordTypes/Problem.recordType-meta.xml
<RecordType>
    <fullName>Problem</fullName>
    <active>true</active>
    <businessProcess>Cases Support Process</businessProcess>
    <label>Problem</label>
</RecordType>