force-app/main/default/objects/Case/recordTypes/SAPClaimsCase.recordType-meta.xml
<RecordType>
    <fullName>SAPClaimsCase</fullName>
    <active>true</active>
    <businessProcess>Claims Support Process</businessProcess>
    <description>SAP Claims</description>
    <label>SAP Claims Case</label>
</RecordType>